// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill applies active style when active=true 1`] = `
<View
  style={
    [
      {
        "borderRadius": 9999,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      },
      {
        "backgroundColor": "#E1F5EE",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "500",
        },
        {
          "color": "#0F6E56",
        },
      ]
    }
  >
    Attivo
  </Text>
</View>
`;

exports[`Pill applies inactive when active=false 1`] = `
<View
  style={
    [
      {
        "borderRadius": 9999,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      },
      {
        "backgroundColor": "#F1EFE8",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "500",
        },
        {
          "color": "#888",
        },
      ]
    }
  >
    Inattivo
  </Text>
</View>
`;

exports[`Pill defaults to inactive style 1`] = `
<View
  style={
    [
      {
        "borderRadius": 9999,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      },
      {
        "backgroundColor": "#F1EFE8",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "500",
        },
        {
          "color": "#888",
        },
      ]
    }
  >
    Test
  </Text>
</View>
`;
